# gtf2tab

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.sh  create_archive.sh
ci_scripts/: prebuild.sh  ubuntu_prebuild.sh
include/: parsegtf.hpp  utility.hpp  version.hpp
src/: main.cpp  parsegtf.cpp  utility.cpp
tests/: CMakeLists.txt  parsegtf_test.cpp  utility_test.cpp
